sort.basic.cocktail.AlgCocktailSort1.scala.error
Compilation error:
AlgCocktailSort1:20: error: ')' expected but '}' found.
} 
^